# DamageReport

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: dbt_ci.yml
damage_report/: dbt_project.yml
damage_report/macros/: generate_schema_name.sql  parse_damage.sql
damage_report/models/marts/: mart_economic_impact.sql  mart_geographic_risk.sql  mart_severity_trends.sql  mart_surprise_states.sql  schema.yml
damage_report/models/staging/: schema.yml  sources.yml  stg_county_population.sql  stg_cpi_deflator.sql  stg_storm_events.sql
damage_report/seeds/: event_type_groups.csv  state_regions.csv
ingestion/: ingest_census.py  ingest_cpi.py  ingest_noaa.py  inspect_columns.py  visualize.py
interview_prep/: phase_0_1_interview_prep.md
models/: feature_scaler.pkl  gb_fatality_model.pkl  gb_weighted_model.pkl  lr_fatality_model.pkl
notebooks/: 00-eda.ipynb  01-Trend-Decomposition.ipynb  02-anomaly-detection.ipynb  03-fatality-prediction.ipynb  04-advanced-prediction.ipynb  README.md
